# Black-Box

./: '  .gitignore  .nfs0000000020a4834d0000caeb  README.md  api.go  cmdLine.go  data.db  data.sql  exec.py  files.go  inform.py  json.json  layout.yaml  meanTraitOneValues_GeneralModel_1.txt  meanTraitTwoValues_GeneralModel_1.txt  metadata.json  outline.txt  parse.go  routes.go  run  server.go  speciesInputs_GeneralModel_1.txt  sql.go  structures.go  todo.txt  users.go
ModEvo-Project-Request/: jesse.pub  rainier.pub
executables/: javaProg30SecOutput.txt  javaProg500SecOutput.txt
executables/ModEvo/: MeanFitnessBySimulation.java  ModEvo.html  ModEvo.tmpl  SpeciesCharacteristics.java  config.json  makeContour.gn  modevo.tmpl
executables/ModEvo_Model-1/: ModEvo.java  ModEvo_Model-1.html  ModelOne.java  moveImage.sh  plot.py
executables/ModEvo_Model-2/: MeanTraitOne.java  MeanTraitOneSimulation.java  ModEvoMath.java  ModEvo_Model-2.html  ModelTwo.java  SpeciesCharacteristics.java  plot.py
executables/ModEvo_Model-3/: IndividualFitness.java  IndividualTraitOne.java  IndividualTraitTwo.java  MeanFitness.java  MeanTraitOne.java  ModEvo.java  ModEvo_Model-3.html  ModelThree.java  README.md  SigmoidDistribution.java  moveImage.sh  plot.py
public/: README.md
templates/: contact.html  dashboard.html  dashboard.tmpl  gitstuff  header.tmpl  home.html  home.tmpl  login.html  login.tmpl  people.html  people.tmpl  programs.html  programs.tmpl  publications.html  publications.tmpl  publications2.html  quickstart.html  quickstartb.html  science.html  userHome.tmpl
(+79 files in other folders)
